services/adminservice-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminservice-srv
spec:
  type: NodePort
  selector:
    app: adminservice
  ports:
    - name: adminservice
      protocol: TCP
      port: 80
      targetPort: 5238
