services/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: wine-webshop.azurewebsites.net
      http:
        paths:
          - path: /api/admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-clusterip-srv
                port:
                  number: 80
          - path: /api/basket/?(.*)
            pathType: Prefix
            backend:
              service:
                name: basket-clusterip-srv
                port:
                  number: 80
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-clusterip-srv
                port:
                  number: 80
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: products-clusterip-srv
                port:
                  number: 80
